Added graphs for individual processes on job page
