# web/start/routes.ts
@@ -27,7 +27,7 @@ Route.get('/api/jobs/:id/status/:status', 'ApiController.set_job_status')
 Route.get('/api/jobs/:id/start', 'ApiController.start_job_by_id')
 Route.post('/api/jobs/:id/log', 'ApiController.create_job_log')
 Route.get('/api/jobs/:id/log', 'ApiController.get_job_log')
-Route.get('/api/jobs/:jobId/proc-stats', 'ApiController.job_proc_stats')
+Route.get('/api/jobs/:jobId/proc-stats/:name?', 'ApiController.job_proc_stats')
 Route.post('/api/jobs/:jobId/proc-stats', 'ApiController.add_proc_stats')
 Route.get('/api/jobs/:jobId/security-audit/status/:status', 'ApiController.set_security_audit_status')
 Route.post('/api/jobs/:jobId/security-audit', 'ApiController.update_security_audit')
